<resources>
    <string name="app_name">Bill Please</string>
    <string name="Amount">Amount</string>
    <string name="People">Num of Pax</string>
    <string name="Service">NO SVS</string>
    <string name="Discount">Discount</string>
    <string name="Cash">Cash</string>
    <string name="Paynow">Paynow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_number_of_people">Enter Number of People</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="enter_discount">Enter Discount</string>
    <string name="_0">0</string>
</resources>